--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light margin">
         <a class="navbar-brand" href="#">
             <img src="img/globallabs.png" width="220" height="80">
         </a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Quem somos</a>
+                    <a class="nav-link" href="#quemsomos">Quem somos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Parceiros</a>
@@ -26,5 +26,14 @@
             </ul>
         </div>
     </nav>
+
+    <section id="quemsomos">
+        <div class="container-fluid quem-somos text-center margin">
+            <h3>Quem somos</h3>
+            <img class="rounded-circle" src="img/time.jpg" alt="foto representando um time" width="400" height="400">
+            <h3>Somos um time comprometido com os resultados</h3>
+        </div>
+    </section>
+
 </body>
 </html>
