--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <section id="parceiros">
         <div class="container-fluid text-center margin parceiros">
-            <h3>Parceiros</h3>
+            <h3 class="margin">Parceiros</h3>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4">
@@ -53,6 +53,32 @@
             </div>
         </div>
     </section>
+
+    <section id="servicos">
+        <div class="container-fluid text-center margin">
+            <h3 class="margin">Serviços</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <img src="img/site-1.jpg" width="100%">
+                    </div>
+                    <div class="col-lg-4">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <img src="img/app.jpg" width="100%">
+                    </div>
+                    <div class="col-lg-4">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <img src="img/site-1.jpg" width="100%">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="container-fluid text-center bg-footer margin">
+        <p>Desenvolvido por José</p>
+    </footer>
 
 </body>
 </html>
